...
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarFadeDuration="@android:integer/status_bar_notification_info_maxnum"
            android:scrollbars="vertical"
            android:clickable="true"
            tools:ignore="UselessParent"
            android:layout_above="@+id/imageButton">

        <ListView
            android:id="@+id/listViewF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
...
