<resources>
    <string name="app_name">Processos da Prefeitura</string>
    <string name="app_mainActivity">Busca de Processo</string>
    <string name="app_ProcessoActivity">Detalhes do Processo</string>
    <string name="app_AcompanhamentoActivity">Andamento do Processo</string>
    <string name="action_settings">Settings</string>
    <string name="text_andamentos">Andamentos</string>
    <string name="text_data">Data</string>
    <string name="text_hora">Hora</string>
    <string name="text_depto">Depto</string>
    <string name="text_login">Login</string>
    <string name="text_insti">Insti</string>
    <string name="text_ocorrencia">Ocorrência</string>
    <string name="text_despacho">Despacho</string>
</resources>
